<resources>
    <string name="app_name">Food App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meal_categories">Meal Categories</string>
    <string name="search_hint"> Search Your Recipe...</string>
    <string name="ingredients_lorem">"Sugar:\nEggs:\nCarrot:\nApples:\nMilk:"</string>
    <string name="measure_lorem">"200 g\n2\n1\n5\n100 ml"</string>

    <string name="loren">Bring a large pot of water to a boil. Add kosher salt to the boiling water, then add the pasta. Cook according to the package instructions, about 9 minutes.\r\nIn a large skillet over medium-high heat, add the olive oil and heat until the oil starts to shimmer. Add the garlic and cook, stirring, until fragrant, 1 to 2 minutes. Add the chopped tomatoes, red chile flakes, Italian seasoning and salt and pepper to taste. Bring to a boil and cook for 5 minutes. Remove from the heat and add the chopped basil.\r\nDrain the pasta and add it to the sauce. Garnish with Parmigiano-Reggiano flakes and more basil and serve warm.</string>
    <string name="category_groupe">Category:</string>
    <string name="country_groupe">Country:</string>
    <string name="instruction_groupe">INSTRUCTION</string>
    <string name="ingredients_groupe">INGREDIENTS</string>
</resources>
